2016-10-02  Markus Gans  <guru.mail@muenster.de>
	* The input cursor is now controlled by the virtual terminal

2016-10-02  Markus Gans  <guru.mail@muenster.de>
	* FStatusBar and FMenuBar use now the always-on-top 
	  window option

2016-10-01  Markus Gans  <guru.mail@muenster.de>
	* Add an always-on-top mode for window objects
	* New FToolTip widget to show assisted information

2016-09-30  Markus Gans  <guru.mail@muenster.de>
	* Using arrow keys to move or to resize a window

2016-09-28  Markus Gans  <guru.mail@muenster.de>
	* The size is now dynamically changeable with the mouse 
	  in a resizable window.

2016-09-26  Markus Gans  <guru.mail@muenster.de>
	* FLabel now transmits the Click events to the parent widget

2016-09-25  Markus Gans  <guru.mail@muenster.de>
	* Splitting gotoxy in printPos (local position) 
	  and printPosTerm (global terminal position)
	* Replacing the widget position variables by FRect objects
	* Rename getGeometryShadow() to getGeometryWithShadow()
	* Rename getGeometryGlobal() to getTermGeometry()
	* Rename getGeometryGlobalShadow() to getTermGeometryWithShadow()
	* Rename globalToLocalPos() to termToWidgetPos()
	* Rename getGlobalX() to getTermX()
	* Rename getGlobalY() to getTermY()
	* Rename getGlobalPos() to getTermPos()
	* setColor() without parameters sets the default widget colors
	* New methods setMinimumSize(), setMaximumSize(), setFixedSize() 
	  and setSize()

2016-09-12  Markus Gans  <guru.mail@muenster.de>
	* Activate the title bar menu with ctrl+^

2016-09-11  Markus Gans  <guru.mail@muenster.de>
	* New zoom interaction-elements to maximize a FDialog

2016-09-08  Markus Gans  <guru.mail@muenster.de>
	* Different color when focusing the title bar button
	* Move clearArea() from FWidget to FTerm
	* Move setWidth(), setHeight() and setGeometry from 
	  FDialog to FWindow

2016-09-04  Markus Gans  <guru.mail@muenster.de>
	* FButton, FLineEdit and FProgressbar has shadow now enabled 
	  by default