@@ -1,4 +1,8 @@
-2016-10-02  Markus Gans  <guru.mail@muenster.de>
+2016-10-08  Markus Gans  <guru.mail@muenster.de>
+	* Add the possibility to scroll text up and down 
+	  in a virtual window
+
+2016-10-06  Markus Gans  <guru.mail@muenster.de>
 	* The input cursor is now controlled by the virtual terminal
 
 2016-10-02  Markus Gans  <guru.mail@muenster.de>
